--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -147,6 +147,7 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
+  <!--<script type="module" src="utils/mail.mjs"></script>-->
   <script src="modal.js"></script>
 </body>
 
