--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -122,7 +122,7 @@
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
               <label class="checkbox2-label" for="checkbox2">
                 <span class="checkbox-icon"></span>
-                Je Je souhaite être prévenu des prochains évènements.
+                Je souhaite être prévenu des prochains évènements.
               </label>
               <br>
             </div>
@@ -147,7 +147,7 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
-  <!--<script type="module" src="utils/mail.mjs"></script>-->
+  <!--<script src="./utils/mail.mjs"></script>-->
   <script src="modal.js"></script>
 </body>
 
